Cambio de Nombre Arsenal

--- a/css/style.scss
+++ b/css/style.scss
@@ -64,6 +64,6 @@ h2#burnley {
     background-color:$color-burnley;
 }
 #burnley-visit {
-    background-image: url("../img/Burnley_Away_1000x1000.png");
+    background-image: url("../img/");
     background-color:$color-burnley;
 }
